# trovastelle

./: .gitignore  .gitmodules  CONCEPT.md  INSTALL.md  README.md  Sketch.ipynb  hardware_issues.md  parts_list.md  requirements.txt  setup.cfg
data/: colors.json  config.json  config.json.bak  fetch_celestrak_data.service  fetch_celestrak_data.sh  fetch_celestrak_data.timer  kernels.txt  mellyn.json  minor_planets_of_interest.txt
electrical/: Electrical.monopic  Electrical.txt  arrow.fzz
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/public/d3-celestial-data/: data_paths.txt
frontend/src/: AlertState.js  App.js  Calibration.js  CelestialMap.js  GeolocateButton.js  Observables.js  ObservablesProps.js  ObserverMap.js  RefreshRate.js  Simulated.js  TargetsList.js  freelancer.css  hardware.js  index.css  index.js  trovastelle.css  trovastelle.js
src/celestial_compass/: .trovastelle  020-wsgi-backend.conf  __init__.py  arrow_controller.py  compass.py  display_manager.py  led_client.py  led_manager.py  observables.py  trovastelle.py  trovastelle.service  trovastelle.sh  trovastelle.wsgi  trovastelle_web.py  visibility_window.py
src/celestial_compass/data/: mellyn.py  messier.py  missions.py  missions_base.py  missions_nopyspice.py  missions_xephem.py  planets.py  satellites.py  small_bodies.py
