[metadata]
name = celestial-compass
version = 0.0.1
author = Federico Rossi
author_email = hello@federico.io
description = Controller for the Celestial Compass
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/federico3/sky-finder
project_urls =
    Bug Tracker = https://github.com/federico3/sky-finder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
[options]
package_dir =
    = src
    data = data
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src